# SysMetrics

./: .gitignore  BUG_REPORT_TEMPLATE.md  BUILD_AND_TEST_INSTRUCTIONS.md  BUILD_SUCCESS_REPORT.md  CHANGELOG.md  CI_CD_SOLUTION_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPU_FIX_ANALYSIS.md  CPU_FIX_REPORT.md  CRITICAL_FIX_REPORT.md  DEMO_RESULTS_SUMMARY.md  DEVELOPMENT.md  DOCUMENTATION_REORGANIZATION.md  ENHANCED_TESTING_README.md  FINAL_BRANCH_WORK_SUMMARY.md  FINAL_CI_CD_RESOLUTION.md  FINAL_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_RELEASE_REPORT.md  FINAL_TEST_REPORT.md  GITHUB_PUSH_SUMMARY.md  ICON_FIX_AND_CLEANUP_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_REPORT.md  IMPROVEMENTS_v2.5.0.md  KASPRESSO_BRANCH_SUMMARY.md  LICENSE  LOGGING_GUIDE.md  PROJECT_ANALYSIS_AND_IMPROVEMENTS.md  QA_TESTING_CHECKLIST.md  QA_TESTING_GUIDE.md  QUICK_START.md  QUICK_START_LOGGING.md  README.md  README_FOR_TECH_LEAD.md  REFACTORING_AND_QA_SUMMARY.md  REFACTORING_SUMMARY.md  REQUIREMENTS.md  (+20 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android-ci.yml  ci.yml  nightly.yml  release.yml
allure-report/: index.html
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  native_analytics.cpp  native_analytics.h  native_metrics.cpp  native_metrics.h  native_network_stats.cpp  native_network_stats.h
docs/archive/: 01_TZ_SysMetrics.md  03_Development_Guide.md  FINAL_SUMMARY.md  (+27 more)
sample-allure-report/: index.html  smoke-test-result.json
(+231 files in other folders)
